--- a/Profile.html
+++ b/Profile.html
@@ -51,7 +51,7 @@
     <!-- ส่วนของ Content -->
     <section class="content">
         <div class="content-item">
-            <h3>ข้อมูลส่วนตัว</h3>
+            <img src="img/pers.png" alt="personal info" width="350px">
             <p>วันเกิด :  20 เมษายน 2551</p>
             <p>เพศ : ชาย</p>
             <p>สัญชาติ : ไทย</p>
