--- a/Profile.html
+++ b/Profile.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav-con">
                 <div class="logo">
-                    <a href="index.html"><img src="img/Logo.png" alt="Logo" width="250px"></a>
+                    <a href="index.html"><img src="img/chonrakon (1).png" alt="Logo" width="250px"></a>
                 </div>
 
                 <ul class="menu">
@@ -21,7 +21,6 @@
                     <li><a href="Profile.html">Profile</a></li>
                     <li><a href="Education.html">Education</a></li>
                     <li><a href="Appreciation.html">Appreciation</a></li>
-                    <li><a href="Certification.html">Certification</a></li>
                     <li><a href="Activities.html">Activities</a></li>
                     <li><a href="Contact.html">Contact</a></li>
 
@@ -31,15 +30,15 @@
 
     </nav>
     <!-- ส่วนของหัวข้อ title -->
-    <section class="title">
-        <H1>Profile</H1>
+    <section class="title1">
+        <H1>PROFILE</H1>
         <p>ประวัติส่วนตัว</p>
     </section>
 
     <section class="pic">
         <div class="pich-item">
             <div class="pic-info">
-                <img src="/img/oak1.jpg" alt="pich">
+                <img src="img/20.png" alt="pich">
                 <p>Chonrakon Maethaisong</p>
                 <p>ชั้นมัธยมศึกษาปีที่ 4/7</p>
                 <p>โรงเรียนศรีธาตุพิทยาคม</p>
@@ -58,6 +57,7 @@
             <p>ศาสนา : พุทธ</p>
         </div>
         <div class="content-item">
+            <img src="img/spc2 (1).png" alt="personal info" width="350px">
             <h3>ประวัติการศึกษา</h3>
             <p>ประถมศึกษา</p>
             <p>โรงเรียน : บ้านห้วยวังปลา</p>
@@ -67,6 +67,7 @@
             <p>โรงเรียน : ศรีธาตุพิทยาคม</p>
         </div>
         <div class="content-item">
+            <img src="img/spc (1).png" alt="personal info" width="350px">
             <h3>ความสามารถพิเศษ</h3>
             <p>ด้านการเล่นกีฬา เช่น วอลเลย์บอล ฟุตบอล แบดมินตัน วิ่ง</p>
             <p>การเล่นลูบิค</p>
