--- a/appreciation.html
+++ b/appreciation.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav-con">
                 <div class="logo">
-                    <a href="#">Logo</a>
+                    <a href="index.html"><img src="img/chonrakon (1).png" alt="Logo" width="250px"></a>
                 </div>
 
                 <ul class="menu">
@@ -21,7 +21,6 @@
                     <li><a href="Profile.html">Profile</a></li>
                     <li><a href="Education.html">Education</a></li>
                     <li><a href="Appreciation.html">Appreciation</a></li>
-                    <li><a href="Certification.html">Certification</a></li>
                     <li><a href="Activities.html">Activities</a></li>
                     <li><a href="Contact.html">Contact</a></li>
 
@@ -30,8 +29,73 @@
         </div>
 
     </nav>
-    <h1>
-        Appreciation
-    </h1>
+    <section class="title1">
+        <H1>APPRECIATION</H1>
+        <p>เกียรติบัตรและผลงาน</p>
+    </section>
+    
+    <section class="pic">
+        <div class="pich-item1">
+            <div class="pic-info">
+                <img src="img/app1.png" alt="Appreciation" width="1000px" height="600px">
+                <div class="content-item4">
+                    <p>รางวัลรองชนะเลิสอันดับ 1</p>
+                    <p>การแข่งขันหุ่นยนต์ระดับกลาง ระดับชั้น ม.4-6</p>
+                    <p>เนื่องในงานศิลปหัตถกรรมนักเรียนระดับเขตพื้นที่การศึกษา ครั้งที่ 72</p>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section class="pic">
+        <div class="pich-item1">
+            <div class="pic-info">
+                <img src="img/app3.png" alt="Appreciation" width="1000px" height="600px">
+                <div class="content-item4">
+                    <p>ได้เข้าร่วมอบรมเชิงปฏิบัติการค่าย MAE ROBOTIC JUNIOR CAMP ครั้งที่ 4</p>
+                    <p>หลักสูตร Programmable Logic Controller (PLC) และ Arduino เบื้องต้น</p>
+                    <p>ณ มหาวิทยาลัยเทคโนโลยีสุรนารี จังหวัดนครราชสีมา</p>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section class="pic">
+        <div class="pich-item1">
+            <div class="pic-info">
+                <img src="img/app(1).png" alt="Appreciation" width="1000px" height="600px">
+                <div class="content-item4">
+                    <p>ได้เข้าร่วมอบรมเชิงปฏิบัติการเข่าค่ายเยาวชนวิทยาศาสตร์สิ่งแวดล้อม</p>
+                    <p>ณ โครงการท่องเที่ยวเชิงนิเวศภูฝอยลม อำเภอหนองแสง จังหวัดอุดรธานี</p>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section class="pic">
+        <div class="pich-item1">
+            <div class="pic-info">
+                <img src="img/a2.png" alt="Appreciation" width="1000px" height="600px">
+                <div class="content-item4">
+                    <p>ได้เข้าร่วมการแข่งขัน E-Sports ROV</p>
+                    <p>เนื่องในกิจกรรมวันวิทยาสาสตร์แห่งชาติ ประจำปี 2567</p>
+                    <p></p>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <section class="pic">
+        <div class="pich-item1">
+            <div class="pic-info">
+                <img src="img/a4.png" alt="Appreciation" width="1000px" height="600px">
+                <div class="content-item4">
+                    <p>ได้เข้าร่วมการแข่งขันการโยนไข่ไม่แตก</p>
+                    <p>ระดับชั้นมัธยมศึกษาตอนปลาย</p>
+                    <p>เนื่องในกิจกรรมวันวิทยาสาสตร์แห่งชาติ ประจำปี 2567</p>
+                    </div>
+                </div>
+            </div>
+    </section>
 </body>
 </html>
