--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav-con">
                 <div class="logo">
-                    <a href="#">Logo</a>
+                    <a href="index.html"><img src="img/chonrakon (1).png" alt="Logo" width="250px"></a>
                 </div>
 
                 <ul class="menu">
@@ -21,7 +21,6 @@
                     <li><a href="Profile.html">Profile</a></li>
                     <li><a href="Education.html">Education</a></li>
                     <li><a href="Appreciation.html">Appreciation</a></li>
-                    <li><a href="Certification.html">Certification</a></li>
                     <li><a href="Activities.html">Activities</a></li>
                     <li><a href="Contact.html">Contact</a></li>
 
@@ -30,8 +29,63 @@
         </div>
 
     </nav>
-    <h1>
-        Education
-    </h1>
+    <section class="title1">
+        <H1>EDUCATION</H1>
+        <p>ประวัติการศึกษา</p>
+    </section>
+
+
+
+    <section class="title2">
+        <h1>Education</h1>
+        <p>ระดับประถมศึกษา</p>
+    <section>
+
+        <section class="pic">
+            <div class="pich-item1">
+                <div class="pic-info">
+                    <img src="img/ban.png" alt="Ban Huai Wang Pia" width="450px" height="450px">
+                    <div class="content-item4">
+                        <p>โรงเรียนบ้านห้วยวังปลา ( Banhuaiwangpla school)</p>
+                        <p>ต.ศรีธาตุ อ.ศรีธาตุ จ.อุดรธานี</p>
+                        </div>
+                    </div>
+                </div>
+        </section>
+
+        <section class="title2">
+            <h1>Education</h1>
+            <p>ระดับมัธยมศึกษาตอนต้น</p>
+        <section>
+
+            <section class="pic">
+                <div class="pich-item1">
+                    <div class="pic-info">
+                        <img src="img/stp.png" alt="Ban Huai Wang Pia" width="450px" height="450px">
+                        <div class="content-item4">
+                            <p>โรงเรียนศรีธาตุพิทยาคม (Srithatpittayakom school)</p>
+                            <p>ต.ศรีธาตุ อ.ศรีธาตุ จ.อุดรธานี</p>
+                            </div>
+                        </div>
+                    </div>
+            </section>
+
+            <section class="title2">
+                <h1>Education</h1>
+                <p>ระดับมัธยมศึกษาตอนปลาย</p>
+            <section>
+
+                <section class="pic">
+                    <div class="pich-item1">
+                        <div class="pic-info">
+                            <img src="img/stp.png" alt="Ban Huai Wang Pia" width="450px" height="450px">
+                            <div class="content-item4">
+                                <p>โรงเรียนศรีธาตุพิทยาคม (Srithatpittayakom school)</p>
+                                <p>ต.ศรีธาตุ อ.ศรีธาตุ จ.อุดรธานี</p>
+                                </div>
+                            </div>
+                        </div>
+                </section>
+
 </body>
 </html>
