--- a/Home.html
+++ b/Home.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav-con">
                 <div class="logo">
-                    <a href="index.html"><img src="img/chonrakon (1).png" alt="Logo" width="250px"></a>
+                    <a href="Index.html"><img src="img/chonrakon (1).png" alt="Logo" width="250px"></a>
                 </div>
                 <ul class="menu">
                     <li><a href="Home.html">Home</a></li>
